Alignment fixed

--- a/assets/css/elevate-style.css
+++ b/assets/css/elevate-style.css
@@ -621,6 +621,7 @@ input[type="checkbox"]{
 }
 
 .timeline__event__content {
+  width: 100%;
   text-align: center;
   padding: 20px;
 }
